# python3-tn3270

./: .gitignore  CHANGELOG  Makefile.in  README.md  autogen.sh  configure.ac  gitsync.sh  metainfo.xml.in  py3270.cbp  python-pw3270.cbp  run.bat  setup.py  test.sh
.github/workflows/: codeql-analysis.yml  codeql.yml  winpkg.yml
debian/: changelog  control  lib3270-python-bindings.dsc  python-pw3270.dsc  python-tn3270.dsc  python3-tn3270.dsc  rules
examples/: connect.py  simple.py
rpm/: _service  lib3270-python-bindings.spec  python-pw3270.spec  python-tn3270.spec  python3-tn3270.spec
src/: actions.cc  config.h.in  private.h  py3270.cc
src/action/: init.cc  methods.cc  new.cc  tools.cc  type.c
src/include/: config.h.in  py3270.h  pyaction.h  pysession.h  workers.h
src/module/: init.c  init.cc  properties.cc  tools.cc  types.c
src/module/windows/: init.cc  resources.rc.in  tools.cc
src/objects/: action.cc  session.cc
src/session/: actions.cc  attributes.cc  get.cc  init.cc  misc.cc  network.cc  set.cc  tools.cc  type.c  wait.cc
src/terminal/: attributes.cc  get.cc  init.cc  misc.cc  network.cc  set.cc
testprograms/: sample.py
